# linkstitcher

./: .gitignore  Cargo.toml  Justfile  bookmarked-urls.txt  feed.xml  hackernews.feed.xml  saved-urls.txt  saveds.feed.xml
examples/: gemini-cli.rs  select-all.rs  sh.rs
migrations/2025-11-10-042911-0000_init/: up.sql
migrations/2025-11-10-163254-0000_previews/: up.sql
migrations/2025-11-13-194152-0000_previews/: down.sql  up.sql
site/: feed.xml  hackernews.feed.xml  saveds.feed.xml
src/: config.rs  lib.rs  models.rs  rss_channel.rs  schema.rs
src/utility/: ai.rs  arxiv.rs  db.rs  github.rs  mod.rs  rss.rs  x.rs
