[package]
name = "linkstitcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
diesel = { version = "2.3.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.28"
map-macro = "0.3.0"
octocrab = "0.47.1"
pdf-extract = "0.10.0"
readability-js = "0.1.5"
reqwest = { version = "0.12.24", features = ["json"] }
rss = "2.0.12"
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
urlencoding = "2.1.3"
xml-rs = "1.0.0"
